# letloop

./: .dir-locals.el  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THANKS  check.sh  fbbg.py  header.md  index.html  index.md  letloop.md  letloop.nfo  letloop.scm  main.c  main.scm  make-check.sh  make-reference.scm  make-www.scm  makefile  pgm.scm  procedure-index.csv  program.scm  pyproject.toml  tamazgha.space.scm  template.html  venv
.github/: pull_request_template.md
.github/workflows/: checks.yaml  pre-release.yaml  release.yaml
about/: index.html  index.md
checks/: README.md
checks/check/: check-empty.scm  check-error.scm  check-fail.scm  check-failure.scm  check-success.scm
compendium/2024/: index.html  index.md
examples/: blake3sum.scm  codex.scm  cx.seed  example.scm  hello.seed  html.seed  letloop-entangle-http-serve.scm  letloop.seed  library.seed  main.scm  make-check-000.scm  odd-event.seed  termbox2.scm  yaz.scm
examples/codex/: base.scm
lib/: atom.xml  feed.xml
lib/letloop/: argon2.md  argon2.scm  blake3.scm  byter.scm  cairo.scm  cffi.md  cffi.scm  entangle.scm  epoll.scm  gamma.md  html.scm  http.scm  lsm1.scm  sxpath.scm  termbox2.scm  unknown.md  unknown.scm
lib/scheme/: base.scm  bitwise.scm  eval.scm  generator.scm  hash-table.scm  lazy.scm  (+10 more)
local/: MakefileLSM
log/: atom.xml  feed.xml  index.html  index.md
projects/: just-linux.scm  root.scm  seed.scm  tamazgha.space.scm  vs.scm
static/: foundationdb.dev.css  main.css  stars.js
tinkero/: index.html  seed.scheme
versus/: index.html  vs.css  vs.scm
(+56 files in other folders)
