[tool.poetry]
name = "fbbg"
version = "0.1.0"
description = ""
authors = ["Amir <amirouche@hyper.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.2"
ipython = "^8.11.0"
feedgen = "^0.9.0"
pytz = "^2023.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
